<resources>

    <string name="app_name">GPVision</string>
    <string name="base_ok">OK</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_warning">Warning!</string>
    <string name="base_error_title">Error!</string>

    <!-- login fragment -->
    <string name="login_fragment_have_account_text">Alreadly have an account</string>
    <string name="login_fragment_user_name_hint_text">User Name:</string>
    <string name="login_fragment_password_hint_text">Password:</string>
    <string name="login_fragment_forgot_button_text">Forgot?</string>
    <string name="login_fragment_log_in_button_text">Log in</string>
    <string name="login_fragment_not_have_account">Don\'t have an account?</string>
    <string name="login_fragment_sign_up_button_text">Sign up</string>
    <string name="login_fragment_error_message_user_name_empty">User name can not empty!</string>
    <string name="login_fragment_error_message_password_empty">Password can not empty!</string>
    <string name="login_fragment_error_message_user_name_sprcial_chars">User name can not input special characters!</string>
    <string name="login_fragment_error_message_password_sprcial_chars">Password can not input special characters!</string>

    <!-- signup fragment -->
    <string name="signup_fragment_user_name_hint">Please input your user name</string>
    <string name="signup_fragment_email_hint">Please input your email</string>
    <string name="signup_fragment_pass_hint">Please Input your pass</string>
    <string name="signup_fragment_confirm_hint">Please confirm your pass</string>
    <string name="signup_fragment_signup_button_text">Sign Up</string>
    <string name="signup_fragment_error_message_user_name_empty">User name can not empty!</string>
    <string name="signup_fragment_error_message_email_empty">Email can not empty!</string>
    <string name="signup_fragment_error_message_password_empty">Password can not empty!</string>
    <string name="signup_fragment_error_message_pass_not_same">Pass can not different</string>
    <string name="signup_fragment_error_message_user_name_sprcial_chars">User name can not input special characters!</string>
    <string name="signup_fragment_error_message_email_format_error">Email format error!</string>
    <string name="signup_fragment_error_message_password_sprcial_chars">Password can not input special characters!</string>
    <string name="signup_fragment_success">Sign Up Success</string>

    <!-- main activity -->
    <string name="main_activity_videos">Videos</string>
    <string name="main_activity_notifications">Notifications</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_logout">Logout</string>
    <string name="main_activity_dialog_message_logout">Are You Sure To Logout?</string>

    <!-- video info fragment -->
    <string name="video_info_fragment_title">Your videos:</string>
    <string name="video_info_fragment_refresh_btn">refresh</string>
    <string name="video_info_fragment_upload_more">Upload more</string>
    <string name="video_info_fragment_alert_dialog_title_warning">Warning!</string>
    <string name="video_info_fragment_alert_dialog_message_delete">Are your sure to delete %s ?</string>
    <string name="video_info_fragment_alert_dialog_message_abort">Are your sure to abort %s ?</string>
    <string name="video_in_fragment_error_message_mine_type_error">MineType Error!</string>
    <string name="video_in_fragment_error_message_file_exist_error">File Exist!</string>
    <string name="video_in_fragment_error_message_user_space_error">Your Space Only 2GB!</string>

    <!-- choose file fragment -->
    <string name="choose_file_fragment_choose_file">Choose a file</string>
    <string name="choose_file_fragment_max_file">1GB max per file</string>
    <string name="choose_file_fragment_upload_button_text">Upload</string>
    <string name="choose_file_fragment_cancel_button_text">Cancel</string>
    <string name="choose_file_fragment_file_big">The file is too big.</string>

    <!-- video play fragment -->
    <string name="video_play_fragment_slash">/</string>
    <string name="video_play_fragment_init_time">00:00</string>

    <!-- save and share fragment -->
    <string name="save_and_share_fragment_save_button_text">Save</string>
    <string name="save_and_share_fragment_share_button_text">Share</string>
    <string name="save_and_share_fragment_save_dialog_title">Save to SD card</string>
    <string name="save_and_share_fragment_save_success">Save Success</string>
    <string name="save_and_share_fragment_save_failed">Save Failed</string>

    <!-- notification fragment -->
    <string name="notification_fragment_remove_button_text">Remove</string>
    <string name="notification_fragment_clean_button_text">Clean</string>
    <string name="notification_fragment_alert_dialog_title_Clean">Clean!</string>
    <string name="notification_fragment_alert_dialog_message_clean">Are you sure to clean the notifications?</string>
    <string name="notification_fragment_notification_message">From %1$s To %2$s</string>

    <!-- setting fragment -->
    <string name="setting_fragment_old_password_hint">Old password</string>
    <string name="setting_fragment_new_password_hint">New password</string>
    <string name="setting_fragment_confirm_password_hint">Confirm password</string>
    <string name="setting_fragment_error_message_old_pass_empty">Old pass can not empty</string>
    <string name="setting_fragment_error_message_new_pass_empty">New pass can not empty</string>
    <string name="setting_fragment_error_message_pass_not_same">New pass can not different</string>
    <string name="setting_fragment_error_message_pass_can_not_input_special_chars">New pass can not input special characters!</string>
    <string name="setting_fragment_error_message_success">Success</string>

    <!-- dialog strings -->
    <string name="dialog_message_loading">Loading...</string>
    <string name="dialog_message_login">Logining...</string>
    <string name="dialog_message_sign_up">Sign up...</string>
    <string name="dialog_message_buffering">Buffering...Please Wait</string>

    <!-- api error message -->
    <string name="api_error_network_error">Network Error!</string>
    <string name="api_error_pass_not_corrent">pass not corrent</string>
    <string name="api_error_user_not_exist">user not exist</string>
    <string name="api_error_internal_error_occur">internal error occur</string>
    <string name="api_error_permission_error">App Token Out of Date,Please ReLogin!</string>
    <string name="api_error_argument_has_mistake">argument has mistake</string>
    <string name="api_error_media_file_does_not_exist">media file does not exist</string>
    <string name="api_error_crypto_error">crypto error</string>
    <string name="api_error_mongo_db_error">mongo db error</string>
    <string name="api_error_user_existed">user already existed</string>

</resources>