<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_large" >

    <EditText
        android:id="@+id/signup_fragment_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_fragment_user_name_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signup_fragment_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_fragment_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_fragment_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_fragment_pass_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_fragment_confirm_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_fragment_confirm_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/signup_fragment_sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_large"
            android:background="@drawable/bg_button_blue"
            android:padding="@dimen/padding_small"
            android:text="@string/signup_fragment_signup_button_text" />

        <Button
            android:id="@+id/signup_fragment_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:background="@drawable/bg_button_blue"
            android:padding="@dimen/padding_small"
            android:text="@string/base_cancel" />
    </LinearLayout>

</LinearLayout>