<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/choose_file_fragment_choose_file"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_file_fragment_choose_file"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_choose_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_file_fragment_max_file"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/choose_file_fragment_file_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/text_color_gray"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:gravity="center" >

        <Button
            android:id="@+id/choose_file_fragment_upload_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange"
            android:padding="@dimen/padding_small"
            android:text="@string/choose_file_fragment_upload_button_text" />

        <Button
            android:id="@+id/choose_file_fragment_cancel_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_weight="1"
            android:background="@drawable/bg_button_gray"
            android:padding="@dimen/padding_small"
            android:text="@string/choose_file_fragment_cancel_button_text" />
    </LinearLayout>

</LinearLayout>