<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_info_fragment_title"
            android:textColor="@color/text_color_gray" />

        <Button
            android:id="@+id/video_info_fragment_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_info_fragment_refresh_btn" />
    </LinearLayout>

    <ListView
        android:id="@+id/video_info_fragment_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/text_color_black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_black" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/video_info_fragment_upload_more"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/video_info_video_name_text_size" />

        <Button
            android:id="@+id/video_info_fragment_upload_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_button_open" />
    </LinearLayout>

</LinearLayout>