<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/save_and_share_fragment_image_name_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/video_info_fragment_title"
        android:textColor="@color/text_color_gray" />

    <ImageView
        android:id="@+id/save_and_share_fragment_image_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:gravity="center" >

        <Button
            android:id="@+id/save_and_share_fragment_save_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange"
            android:padding="@dimen/padding_small"
            android:text="@string/save_and_share_fragment_save_button_text" />

        <Button
            android:id="@+id/save_and_share_fragment_share_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange"
            android:padding="@dimen/padding_small"
            android:text="@string/save_and_share_fragment_share_button_text" />
    </LinearLayout>

</LinearLayout>